# smallclue

./: .gitignore  .gitmodules  CMakeLists.txt  COMPARISON.md  COMPARISON_LINUX_GUEST.md  Dockerfile  LICENSE  README.md  TODO.md  build_docker.sh  build_smallclue.sh  fetch_dependencies.sh  patch.diff  patch2.diff  patch3.diff  setup_ish_env.sh  setup_posix_env.sh  smallclue.h  smallclue_top  test_grep_perf.sh  test_head_perf.sh  test_ls_sort  test_md.py  test_md_links.py  test_perf.sh  test_sum_perf.sh  test_sum_sysv_perf.sh  test_tr_perf.sh  test_wc_perf.sh  test_xargs_perf.sh
.Jules/: palette.md
.jules/: bolt.md  palette.md  sentinel.md
common/: path_truncate.h  path_virtualization.h  pscal_hosts.h  runtime_clipboard.h  runtime_tty.h
compat/sys/: queue.h
src/: awk_app.c  awk_app.h  awk_interp.c  awk_interp.h  awk_lexer.c  awk_lexer.h  awk_parser.c  awk_parser.h  awk_value.c  awk_value.h  base64_app.c  base64_app.h  checksum_app.c  checksum_app.h  chown_app.c  chown_app.h  cmp_app.c  cmp_app.h  comm_app.c  comm_app.h  core.c  core.c.orig  dd_app.c  dd_app.h  diff_app.c  diff_app.h  dvtm_app.c  dvtm_app.h  dvtm_runtime_hooks.h  expr_app.c  expr_app.h  fmt_app.c  fmt_app.h  fold_app.c  fold_app.h  git_app.c  gzip_app.c  gzip_app.h  integration.c  main.c  (+44 more)
src/shell/: ast.c  ast.h  lexer.c  lexer.h  parser.c  parser.h  quote_markers.h  sh_applet_stubs.c  sh_arith.c  sh_astcopy.c  sh_builtins.c  sh_exec.c  sh_expand.c  sh_interp.h  sh_lineedit.c  sh_main.c  sh_utils.c  sh_utils.h  sh_var.c  test_sh.sh  word_encoding.h
